expired lock checking
